# mmkvc

./: .gitmodules  CMakeLists.txt  README.md
cmake/: proto_util.cmake
mmkv/: CMakeLists.txt  README.md  mmkv.cc  mmkv.h
mmkv/algo/: reserved_array.h
mmkv/algo/internal/: tree_hashtable.h
mmkv/client/: configd_client.cc  configd_client.h  mmkv_client.cc  mmkv_client.h  mmkv_value.cc  mmkv_value.h  type.h
mmkv/internal/: mmbp_codec.cc  mmbp_request.h  mmbp_response.cc  mmbp_util.h  mmkv_client.cc  mmkv_client.h  mmkv_value.cc  mmkv_value.h  type.h
mmkv/protocol/: mmbp.h  mmbp_codec.h  mmbp_request.cc  mmbp_request.h  mmbp_response.cc  mmbp_response.h  mmbp_util.h  status_code.cc  status_code.h  string.h
mmkv/thread/: completion_queue.h  completion_queue_next.h  cq_common.h
mmkv/util/: move_only_function.h  shard_util.h
mmkvc/: CMakeLists.txt  README.md  mmkv.cc  sync_mmkv.sh
mmkvc/client/: mmkv_client.cc  mmkv_client.h  mmkv_value.cc  mmkv_value.h
mmkvc/protocol/: command.h  mmbp.h  mmbp_codec.cc  mmbp_codec.h  mmbp_request.cc  mmbp_request.h  mmbp_response.cc  mmbp_util.h  status_code.h
mmkvc/thread/: completion_queue.cc  completion_queue_interface.h  completion_queue_next.cc  completion_queue_pluck.cc  completion_queue_pluck.h
mmkvc/util/: move_only_function.h
test/: CMakeLists.txt
test/client/: add_str_bench.cc  add_str_future_test.cc  add_str_test.cc
test/stl/: fifo_bench.cc
test/util/: move_only_function_test.cc
